cmake_minimum_required(VERSION 3.23)
project(leetcode_problems)

set(CMAKE_CXX_STANDARD 23)

add_executable(leetcode_problems main.cpp 53-MaximumSubarray.cpp 53-MaximumSubarray.h 1710-MaximumUnitsOnATruck.cpp 1710-MaximumUnitsOnATruck.h 2055-PlatesBetweenCandles.cpp 2055-PlatesBetweenCandles.h 70-ClimbingStairs.cpp 70-ClimbingStairs.h 907-SumOfSubarrayMinimums.cpp 907-SumOfSubarrayMinimums.h 2272-SubstringWithLargestVariance.cpp 2272-SubstringWithLargestVariance.h 20-ValidParentheses.cpp 20-ValidParentheses.h 1041-RobotBoundedInCircle.cpp 1041-RobotBoundedInCircle.h)
